# Bluppy-OS

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bos_tools.json
notes/: NOTES.md
src/bootloader/: boot.asm
tools/bos/: __init__.py  __main__.py  cli.py  const.py  core.py  setup.cfg
