[metadata]
name = bos
version = 0.1.0
author = Adwaith-Rajesh
author_email = adwaithrajesh3180@gmail.com
description = Bluppy OS tools
url = https://github.com/Adwaith-Rajesh/Bluppy-OS
license = GPL-3.0 License

[options]
packages = find:
python_requires = >=3.9.1

[options.entry_points]
console_scripts =
    bos = cli:main
